turtleart.flower.Flower.scala.error
Erreur de compilation :
Flower:4: error: illegal start of simple expression
  for(i<- )
          ^Flower:12: error: ')' expected but '}' found.
}
^